# lie4ml

./: docker-compose.yaml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/api/v1/: db.py  main.py  migrate_db.py
backend/api/v1/cruds/: articles.py
backend/api/v1/models/: articles.py
backend/api/v1/routers/: articles.py  users.py
backend/api/v1/schemas/: articles.py  users.py
frontend/: Dockerfile
frontend/src/: App.jsx
frontend/src/api/: articleAPI.ts
frontend/src/components/: ArticleList.tsx
